# HashLang

./: .gitignore  CMakeLists.txt  README.md
inc/: ast.hpp  evaluator.hpp  lexer.hpp  node.hpp  parser.hpp  token.hpp  types.hpp
include/: ast.hpp  evaluator.hpp  lexer.hpp  parser.hpp  token.hpp  types.hpp
source/: ast.cpp  evaluator.cpp  parser.cpp
src/: ast.cpp  evaluator.cpp  lexer.cpp  lexer.hpp  main.cpp  node.cpp  node.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp
test/: math.hash
